2005-03-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XsltCompiledContext.cs,
	  XslStylesheet.cs : Fixed significant performance loss on whitespace
	  handling.

2005-03-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XslKey.cs : removed unused NeedAbsoluteMatching.
	* XslFunctions.cs : Added Peer (for peer & subtree optimization).
	  Added some missing ToString() overrides.

2005-03-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XslStylesheet.cs, XslCompiledContext.cs : Fixed PreserveWhitespace()
	  to work fine with xsl:*-space attributes as expected.
	* XslTransformProcessor.cs : PreserveWhitespace() in this file is 
	  actually nothing. It should not use XsltContext.PreserveWhitespace()
	  because this method is used to control output, while the referenced
	  method is used to control source document.

2005-03-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTemplate.cs : First non-element content were incorrectly ignored.

2005-03-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XslFunctions.cs, Compiler.cs : Eliminated XPathNavigatorNsm class
	  to reduce references to stylesheet XPathNavigator. To accomplish it,
	  IStaticXsltContext does not declare GetNsm() anymore. All xslt
	  function types now directly hold IStaticXsltContext.
	* XslStylesheet.cs : removed "Compiler c" field.
	  Removed unused properties.

2005-03-08  Atsushi Enomoto  <atsushi@ximian.com>

	* GenericOutputter.cs : When WriteStartElement() requires to add
	  new namespace declaration, _currentNamespaceDecls needs to be set.

2005-03-08  Atsushi Enomoto  <atsushi@ximian.com>

	* GenericOutputter.cs : for duplicate attribute in an element, no need
	  to keep previous prefix.

2005-03-08  Atsushi Enomoto  <atsushi@ximian.com>

	* GenericOutputter.cs : Prefix "xml" is only allowed to the fixed XML
	  namespace. Rewrite prefix only when there is non-empty namespace.

2005-03-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XslStylesheet.cs : Now namespace aliases are collected in prior to